Implement stepping and play functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>mazr</title>
 
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script
@@ -14,6 +15,42 @@
     <script src="bundle.js" charset="utf-8"></script>
   </head>
   <body>
+    <div class="the-world">
+      <div class="heading group">
+        <div class="title">
+          The Sims v0
+        </div>
+        <div class="subtitle">
+          An exciting simulation of pixel life and death!
+        </div>
+
+        <div class="heading-right group">
+          <div class="heading-right-item">
+            <a href="http://lizha.ng/">Website</a>
+          </div>
+          <div class="heading-right-item">
+            <a href="https://github.com/vorpus/PicassoJS">Github</a>
+          </div>
+          <div class="heading-right-item">
+            <a href="https://www.linkedin.com/in/zhangio">Linkedin</a>
+          </div>
+        </div>
+      </div>
       <canvas id="canvas"></canvas>
+      <div class="below-canvas">
+        <div class="one-step button">
+          Step
+        </div>
+        <div class="step-play button">
+          <div class="play-active">
+            Play
+          </div>
+          <div class="play-active hidden">
+            Stop
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
