Add template generators

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>mazr</title>
+    <title>The Sims v0</title>
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -48,6 +48,13 @@
           <div class="play-active hidden">
             Stop
           </div>
+        </div>
+
+        <div class="template-glider button">
+          Glider
+        </div>
+        <div class="template-pulsar button">
+          Pulsar
         </div>
       </div>
     </div>
