--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="http://lizha.ng/">Website</a>
           </div>
           <div class="heading-right-item">
-            <a href="https://github.com/vorpus/PicassoJS">Github</a>
+            <a href="https://github.com/vorpus/">Github</a>
           </div>
           <div class="heading-right-item">
             <a href="https://www.linkedin.com/in/zhangio">Linkedin</a>
@@ -147,7 +147,7 @@
                 <li>A live cell with > 3 live neighbors dies (overpopulation)</li>
                 <li>A dead cell with exactly 3 live neighbors comes to life (reproduction)</li>
               </ol>
-              Find more on my Github (readme)!
+              Find more on my <a href="https://github.com/vorpus/theSims0" target="_blank">Github (readme)</a>!
             </p>
           </div>
         </div>
