--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <div class="slider">
             <p>Speed:</p>
-            <input id="speed-picker" type="range" name="" value="40" name="" value="0" min="0" max="100">
+            <input id="speed-picker" type="range" name="" value="80" min="0" max="100">
           </div>
 
           <div class="clear-all button">
@@ -65,6 +65,9 @@
 
           <div class="pickers-everything">
             <div class="pickers-section group">
+              <div id="cleartemplate" class="template-clickable button" data="dot">
+                Default Cursor
+              </div>
               <div class="pick-still-life button">
                 Still Life
               </div>
@@ -89,6 +92,12 @@
               <div class="template-clickable button" data="beehive">
                 beehive
               </div>
+              <div class="template-clickable button" data="quadpseudo">
+                Quad pseudo
+              </div>
+              <div class="template-clickable button" data="eater">
+                eater
+              </div>
             </div>
 
             <div class="below-selectors-type oscillator-select hidden group">
@@ -98,10 +107,16 @@
               <div class="template-clickable button" data="pentadecathlon">
                 pentadecathlon
               </div>
+              <div class="template-clickable button" data="bentkeys">
+                Bent Keys
+              </div>
+              <div class="template-clickable button" data="diamondring">
+                diamond ring
+              </div>
+
               <div class="template-clickable button" data="pulsar">
                 Pulsar
               </div>
-
               <div class="template-clickable button" data="p16">
                 P16
               </div>
@@ -109,7 +124,7 @@
 
             <div class="below-selectors-type spaceship-select hidden group">
               <div class="template-description">
-                <b>Spaceships</b> are patterns that reappear after several generations in a new position, giving the illusion of movement.
+                <b>Spaceships</b> are patterns that appear to move along the game canvas.
               </div>
               <div class="template-clickable button" data="glider">
                 Glider
@@ -120,6 +135,15 @@
               <div class="template-clickable button" data="c10orthogonal">
                 c10orthogonal
               </div>
+              <div class="template-clickable button" data="b52bomber">
+                b52bomber
+              </div>
+              <div class="template-clickable button" data="backrake1">
+                backrake1
+              </div>
+              <div class="template-clickable button" data="canadagoose">
+                canada goose
+              </div>
             </div>
 
             <div class="below-selectors-type generator-select hidden group">
@@ -128,6 +152,12 @@
               </div>
               <div class="template-clickable button" data="glidergun">
                 Gosper Glider Gun
+              </div>
+              <div class="template-clickable button" data="vacuum">
+                Vacuum
+              </div>
+              <div class="template-clickable button" data="bigun">
+                Bi-gun
               </div>
 
             </div>
